Fixed the header on mobile

--- a/public/css/help.css
+++ b/public/css/help.css
@@ -704,6 +704,11 @@ h6:hover .anchor span:before {
   .status {
     display: none;
   }
+
+  nav {
+    width: 75%;
+  }
+
 }
 
 #comments {
